Wrap front title in a div for improved structure and update styles for correct display on mobile

--- a/src/components/cards/flipcard/index.scss
+++ b/src/components/cards/flipcard/index.scss
@@ -120,7 +120,7 @@
     }
 }
 @media screen and (max-width: 768px) {
-    .flip-card-front .front-title {
+    .flip-card-back .front-title {
             display: none;
         }
 }
